added basic app styles and html view setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+	<div id="toolbar">
+    <div class="title">{{title}}</div>
+	</div>
+	<!-- app content -->
+	<div id="content" class="container">	
+		<div id="viewContainer" class="container">
+			<div id="listView" class="data container">
+        <!--
+        <router-outlet></router-outlet>          
+        -->
+			</div>
+		</div>
+		<div id="footer" class="footer left">
+			<span>github:</span>
+			<a href="https://github.com/RandomFractals/venn-diagram-generator" target="_blank"
+				title="&copy;Random Fractals Inc. 2016 sentimental.io github">venn-diagram-generator</a>
+      <span>&copy;Random Fractals Inc. | 2017</span>
+		</div>
+	</div>  
+</div>
