app title markup, css and test fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div id="toolbar">
-    <div class="title">{{title}}</div>
+    <h1>{{title}}</h1>
 	</div>
 	<!-- app content -->
 	<div id="content" class="container">	
