--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,11 @@
 /* app title style */
 h1 {
   color: black;
-  font-size: .9em;
+  font-size: 1em;
   font-weight: normal;
+}
+
+h2 {
+  font-size: .9em;
+  font-weight: normal;  
 }
