--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,9 @@
             {{ topic.name }}
             <div class="topic-editor">
               <span class="label">stroke:</span>
-              <div class="color" style="background-color: {{topic.strokeColor}}"></div>
+              <div class="color" [style.background-color]="topic.strokeColor"></div>
               <span class="label">fill:</span>
-              <div class="color"></div>
+              <div class="color" [style.background-color]="topic.fillColor"></div>
             </div>
           </li>
         </ul>        
