add topic/ last editor display toggle fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,9 +28,9 @@
           </li>
         </ul>
         <input #newTopic placeholder="Enter New Topic"
-          (keyup.enter)="diagram.addTopic(newTopic.value)"
-          (blur)="diagram.addTopic(newTopic.value); newTopic.value='' ">
-        <button (click)="diagram.addTopic(newTopic.value)">Add</button>
+          (click)="showTopicEditor(selectedTopicIndex, false);"
+          (keyup.enter)="addTopic(newTopic.value); newTopic.value='';" />
+        <button (click)="addTopic(newTopic.value)">Add</button>
 			</div>
 		</div>
 		<div id="footer" class="footer left">
