added custom card-title css for topic list and diagram graph material UI app cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 	<!-- app content -->
 	<div id="content" class="container">	
 		<div id="view-container" class="container">
-      <h2>{{diagram.name}}</h2>
+      <h2 class="card-title">{{diagram.name}}</h2>
 			<div id="list-view" class="data container">
         <ul class="data-list">
           <li *ngFor="let topic of diagram.topics; let i=index;"
