added custom material UI app card styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 	</div>
 	<!-- app content -->
 	<div id="content" class="container">	
-		<div id="view-container" class="container">
+		<div id="view-container" class="card container">
       <h2 class="card-title">{{diagram.name}}</h2>
 			<div id="list-view" class="data container">
         <ul class="data-list">
