--- a/src/styles.css
+++ b/src/styles.css
@@ -47,13 +47,23 @@ a {
 	margin: 0px;
 }
 
-/* app card styles */
+/* custom Material UI app Card(s) styles */
+.card {
+  margin: 3px;
+  border-radius: 1px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px rgba(0,0,0,0.25), 0 4px 4px rgba(0,0,0,0.22);
+}
+
 .card-title {
 	padding: 5px;
 	background-color: #eee;
 	border-bottom: 1px solid #666;
 }
-
 
 /* app footer styles */
 .footer, .label {
