--- a/src/styles.css
+++ b/src/styles.css
@@ -14,13 +14,21 @@ html, body, #app {
 }
 
 /* app title bar styles */
-h1 {
-  color: black;
-  font-size: 1em;
-  font-weight: normal;
+#app-title-bar {
+	background: #06f;
+  min-height: 32px;
+  border-bottom: 1px solid rgba(#000, .12);
 }
 
-/* view container styles */
+h1, .app-title {
+	color: white;
+	font-size: 1em;
+  font-weight: normal;
+  margin: 0px;
+  padding: 10px;
+}
+
+/* app view container styles */
 .container {
  padding: 0px;
  margin: 0px;
