diagram title html/css changes to show diagram.name link for editing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
 	<!-- app content -->
 	<div id="content" class="container">	
 		<div id="view-container" class="card container">
-      <h2 class="card-title">{{diagram.name}}</h2>
+      <div class="card-title">
+        <h2><a>{{diagram.name}}</a> Venn Diagram</h2>
+      </div>
 			<div id="list-view" class="data container">
         <ul class="data-list">
           <li *ngFor="let topic of diagram.topics; let i=index;"
