--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,16 +8,16 @@
       <div class="card-title">
         <h2>
           <a #diagramNameEditLink
-            (click)="diagramNameEditor.class='show'; diagramNameEditLink.class='hidden'; showTopicEditor(selectedTopicIndex, false);">
+            (click)="diagramNameEditor.style='display:block'; diagramNameEditLink.style='display:none'; showTopicEditor(selectedTopicIndex, false);">
             {{diagram.name}}
           </a> 
-          <div #diagramNameEditor class="show">
+          <div #diagramNameEditor class="hidden">
             <input #diagramName placeholder="Name Your"
               [attr.value]="diagram.name"
-              (keyup.enter)="diagram.name = diagramName.value; diagramNameEditor.class='hidden'; diagramNameEditor.class='show'" />
+              (keyup.enter)="diagram.name = diagramName.value; diagramNameEditor.style='display:none'; diagramNameEditLink.style='display:inline'" />
             <button id="save-diagram-name-button" 
-              (click)="diagram.name = diagramName.value; diagramNameEditor.class='hidden';">&#10003;</button>
-          </div>     
+              (click)="diagram.name = diagramName.value; diagramNameEditor.style='display:none'; diagramNameEditLink.style='display:inline'">&#10003;</button>
+          </div>
           Venn Diagram
         </h2>
       </div>
