created app footer comp and moved footer html/css parts to it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,12 +51,6 @@
         </div>
 			</div>
 		</div>
-		<div id="footer" class="footer left">
-			<span>github:</span>
-			<a href="https://github.com/RandomFractals/venn-diagram-generator" 
-        target="_blank" class="link"
-				title="&copy;Random Fractals Inc. 2016 sentimental.io github">venn-diagram-generator</a>
-      <span>&copy;Random Fractals Inc. | 2017</span>
-		</div>
+    <app-footer></app-footer>
 	</div>  
 </div>
