--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="container">
-	<div id="app-title-bar">
-    <h1>{{title}}</h1>
-	</div>
+  <app-menu></app-menu>
 	<!-- app content -->
 	<div id="content" class="container">	
 		<div id="view-container" class="card container">
