--- a/src/app/app-footer/app-footer.component.html
+++ b/src/app/app-footer/app-footer.component.html
@@ -1,7 +1,7 @@
-<div id="footer" class="footer left">
+<footer id="app-footer" class="app-footer left">
 	<span>github:</span>
     <a href="https://github.com/RandomFractals/venn-diagram-generator" 
       target="_blank" class="link"
 		  title="&copy;Random Fractals Inc. 2016 sentimental.io github">venn-diagram-generator</a>
     <span>&copy;Random Fractals Inc. | 2017</span>
-</div>
+</footer>
