--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div id="app-view" class="app-view container">
   <app-header></app-header>
-	<div id="content" class="container">	
+	<div id="app-content" class="app-content container">	
     <topic-list></topic-list>
     <venn-diagram></venn-diagram>
-    <app-footer></app-footer>
 	</div>  
+  <app-footer></app-footer>  
 </div>
