lots of html/css changes for the side-bar/diagram view setup

--- a/src/app/topic-list/topic-list.component.html
+++ b/src/app/topic-list/topic-list.component.html
@@ -1,4 +1,4 @@
-<aside id="topic-list" class="topic-list card container">
+<aside id="topic-list" class="side-bar topic-list card container">
   <!-- topic list section header -->
   <div class="card-title">
     <h2>
