--- a/src/app/app-footer/app-footer.component.css
+++ b/src/app/app-footer/app-footer.component.css
@@ -2,7 +2,7 @@
 /* app footer styles */
 footer {
   background-color: #eee;  
-	border-top: 1px solid #666;
+	border-top: 1px solid #ccc;
 	bottom: 0px;
   left: 0px;  
 	height: 24px;
@@ -18,6 +18,6 @@ footer, .label {
 }
 
 .link {
-	font-size: 1.2em;
+	font-size: 1.1em;
 	color: orangered;
 }
