--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -1,3 +1,3 @@
-<main id="diagram-view" class="diagram">
-  <p>TODO</p>
+<main id="diagram-view" class="main-content diagram card container">
+  <p>TODO: render Venn Diagram for the specified topics here.</p>
 </main>
