--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -1,3 +1,3 @@
 <main id="diagram-view" class="main-content diagram card container">
-  <p>TODO: render Venn Diagram for the specified topics here.</p>
+  <p>TODO: render the actual Venn Diagram with topics provided.</p>
 </main>
