alpha v. of new repsonsive 2 cols layout based on this...
https://codepen.io/mor10/pen/QvmLpd

--- a/src/app/app-footer/app-footer.component.html
+++ b/src/app/app-footer/app-footer.component.html
@@ -1,4 +1,4 @@
-<footer id="app-footer" class="app-footer left">
+<footer id="app-footer" class="footer">
     <a href="https://github.com/RandomFractals/venn-diagram-generator" 
       target="_blank" class="link"
 		  title="&copy;Random Fractals Inc. 2016 sentimental.io github">venn-diagram-generator</a>
