--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div id="app-view" class="app-view container">
-  <app-header></app-header>
-  <topic-list></topic-list>
-  <venn-diagram></venn-diagram>
-  <app-footer></app-footer>  
-</div>
+  <app-header class="app-header"></app-header>
+  <venn-diagram class="main-content"></venn-diagram>
+  <topic-list class="side-bar"></topic-list>
+  <app-footer class="app-footer"></app-footer>  
