--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -1,3 +1,3 @@
-<main id="diagram-view" class="main-content diagram card container">
-  <p>TODO: render the actual Venn Diagram with topics provided.</p>
+<main id="diagram-view" class="main-content diagram">
+  <p>TODO: render actual Venn Diagram with topics provided.</p>
 </main>
