added greed/red button styles just for fun

--- a/src/app/topic-list/topic-list.component.css
+++ b/src/app/topic-list/topic-list.component.css
@@ -47,8 +47,17 @@
 	padding: 0px;
 }
 
+/* toolbar/button styles */
 .toolbar {
 	background-color: #eee;
+}
+
+.green-button {
+	color: green;
+}
+
+.red-button {
+	color: red;
 }
 
 /* topic editor container styles */
