+ make them bold

--- a/src/app/topic-list/topic-list.component.css
+++ b/src/app/topic-list/topic-list.component.css
@@ -54,10 +54,12 @@
 
 .green-button {
 	color: green;
+	font-weight: bold;
 }
 
 .red-button {
 	color: red;
+	font-weight: bold;
 }
 
 /* topic editor container styles */
