just setting up new diagram for svg render for now

--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -1,7 +1,7 @@
 <main id="diagram-view" class="main-content diagram">
-  <p>TODO: render actual Venn Diagram with topics provided.</p>
+  <p>{{diagram.name}} Venn Diagram</p>
   <svg id="svg" class="svg" xmlns="http://www.w3.ortg/2000/svg"
     viewBox="0 0 420 420">
-    
+
   </svg>
 </main>
