added simple todo exportSvg and saveAsPng toolbar setup for diagram exports

--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -4,4 +4,9 @@
     viewBox="0 0 420 420">
 
   </svg>
+  <!-- save diagram svg toolbar -->
+  <div class="toolbar">
+    <button id="export-svg-button" (click)="exportSvg()">Export SVG</button>
+    <button id="save-png-button" (click)="saveAsPng()">Save as PNG</button>
+  </div>  
 </main>
