moved diagram title to svg to be included in export/png

--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -1,8 +1,7 @@
 <main id="diagram-view" class="main-content diagram">
-  <p>{{diagram.name}} Venn Diagram</p>
   <svg id="svg" class="svg" xmlns="http://www.w3.ortg/2000/svg"
     viewBox="0 0 420 420">
-
+    <text x="50%" y="20" text-anchor="middle">{{diagram.name}} Venn Diagram</text>
   </svg>
   <!-- save diagram svg toolbar -->
   <div class="toolbar">
