added xlnk ns for svg export, fixed default svg xmlns url

--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -1,5 +1,6 @@
 <main id="diagram-view" class="main-content diagram">
-  <svg id="svg" class="svg" xmlns="http://www.w3.ortg/2000/svg"
+  <svg id="svg" class="svg" xmlns="http://www.w3.org/2000/svg"
+    xlink="http://www.w3.org/1999/xlink"
     viewBox="0 0 420 420">
     <text x="50%" y="20" text-anchor="middle">{{diagram.name}} Venn Diagram</text>
   </svg>
